--- a/m1/wazz/index.html
+++ b/m1/wazz/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Lorem ipsum dolor sit amet consectetur.</div>
-    <div>Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="b2">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="b1">Lorem ipsum dolor sit amet consectetur.</div>
 </body>
 </html>
