--- a/m1/wzz/index.html
+++ b/m1/wzz/index.html
@@ -8,8 +8,8 @@
 <body>
 <div class="bgi">
     <div class="block1"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
-    <div class="block2"><p>Lorem ipsum dolor sit amet.</p></div>
-    <div class="block3"><p>Lorem ipsum dolor sit amet.</p></div>
+    <div class="block2"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
+    <div class="block3"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</1></div>
 </div>
 </body>
 </html>
