--- a/m1/wzz/index.html
+++ b/m1/wzz/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="bgi">
-    <div class="block1"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
-    <div class="block2"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
-    <div class="block3"><a href="m1\wazz\index.html">Lorem ipsum dolor sit amet.</1></div>
+    <div class="block1"><a href="wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
+    <div class="block2"><a href="wazz\index.html">Lorem ipsum dolor sit amet.</a></div>
+    <div class="block3"><a href="wazz\index.html">Lorem ipsum dolor sit amet.</1></div>
 </div>
 </body>
 </html>
